# PluginShadertoy

./: .gitignore  .gitmodules  APIKey.h  CMakeLists.txt  README.md  Shadertoy.cpp  Shadertoy.h  dllmain.cpp
inc/PluginAPI/: Plugin.h
